force-app/main/default/objects/Badge_Scan__c/Badge_Scan__c.object-meta.xml
<CustomObject>
    <label>Badge Scan</label>
    <nameField>
        <displayFormat>BS-{00000}</displayFormat>
        <label>Badge Scan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Badge Scans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>