force-app/main/default/objects/Badge_Scan__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>Event_Attendee__c</referenceTo>
    <relationshipLabel>Badge Scans</relationshipLabel>
    <relationshipName>Badge_Scans</relationshipName>
    <type>Lookup</type>
</CustomField>