force-app/main/default/objects/Badge_Scan__c/fields/Badge_Id__c.field-meta.xml
<CustomField>
    <fullName>Badge_Id__c</fullName>
    <label>Badge Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>