force-app/main/default/objects/Badge_Scan__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Badge Scans</relationshipLabel>
    <relationshipName>Badge_Scans</relationshipName>
    <type>Lookup</type>
</CustomField>