force-app/main/default/objects/Badge_Scan__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Badge Scans</relationshipLabel>
    <relationshipName>Badge_Scans</relationshipName>
    <type>Lookup</type>
</CustomField>