force-app/main/default/objects/Badge_Scan__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Badge Scans</relationshipLabel>
    <relationshipName>Badge_Scans</relationshipName>
    <type>Lookup</type>
</CustomField>