force-app/main/default/objects/Badge_Scan__c/fields/Needs_Review__c.field-meta.xml
<CustomField>
    <defaultValue>false</defaultValue>
    <fullName>Needs_Review__c</fullName>
    <description>More than one Contact matched this person. The scan still went through so the door keeps moving, but the match was ambiguous and someone should check it.</description>
    <label>Needs Review</label>
    <type>Checkbox</type>
</CustomField>