force-app/main/default/objects/Badge_Scan__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checked In</fullName>
            </value>
            <value>
                <fullName>Already Checked In</fullName>
            </value>
            <value>
                <fullName>Not Found</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>