force-app/main/default/objects/Badge_Scan__c/fields/Scan_Method__c.field-meta.xml
<CustomField>
    <fullName>Scan_Method__c</fullName>
    <label>Scan Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Camera Scan</fullName>
            </value>
            <value>
                <fullName>Manual Check-in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>