force-app/main/default/objects/Badge_Scan__c/fields/Scanned_At__c.field-meta.xml
<CustomField>
    <fullName>Scanned_At__c</fullName>
    <label>Scanned At</label>
    <type>DateTime</type>
</CustomField>