force-app/main/default/objects/Badge_Scan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Badge_Id__c</columns>
    <columns>Result__c</columns>
    <columns>Scan_Method__c</columns>
    <columns>Campaign__c</columns>
    <columns>Attendee__c</columns>
    <columns>Scanned_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>